--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap');
 @import "tailwindcss";
 
 * {
-  font-family: "Sour Gummy", serif;
+  font-family: "Playpen Sans", serif;
 }
